[project]
name = "rca-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.19",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langgraph-api>=0.4.1",
    "langgraph-cli>=0.4.0",
    "python-dotenv>=1.1.1",
]
